refactor: improve codebase quality, performance, and SEO
- add animation definitions (fade-in, fade-in-up)
- enable React Compiler and remove build error suppression
- add sitemap.xml and robots.txt generation
- add generateStaticParams for static blog post generation
- extract shared formatDate utilities to lib/utils.ts
- replace img with Next.js Image component in MDX
- add error handling and input validation to OG routes
- move analytics token to environment variable
- restrict image remote patterns to enio.la only
- enable stricter Biome lint rules
- add caching and pre-sorting for blog posts
- show keyboard hints on mobile
- remove unused PostsList wrapper and Table component

--- a/biome.json
+++ b/biome.json
@@ -30,21 +30,20 @@
     "rules": {
       "recommended": true,
       "style": {
-        "noNonNullAssertion": "off",
-        "noUselessElse": "off",
-        "noParameterAssign": "off"
+        "noNonNullAssertion": "warn",
+        "noUselessElse": "warn",
+        "noParameterAssign": "warn"
       },
       "suspicious": {
-        "noExplicitAny": "off",
-        "noAssignInExpressions": "off",
+        "noExplicitAny": "warn",
+        "noAssignInExpressions": "warn",
         "noConfusingVoidType": "off"
       },
       "complexity": {
-        "noForEach": "off",
-        "noBannedTypes": "off"
+        "noForEach": "off"
       },
       "performance": {
-        "noAccumulatingSpread": "off"
+        "noAccumulatingSpread": "warn"
       }
     }
   }
