--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "dev": "next dev --turbopack -p 8080"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "babel-plugin-react-compiler": "^19.0.0-beta-a7bf2bd-20241110",
     "lucide-react": "^0.456.0",
     "next": "15.5.9",
-    "next-mdx-remote": "^5.0.0",
     "react": "19.0",
     "react-dom": "19.0",
     "shiki": "^1.22.2",
