--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "lucide-react": "^0.456.0",
     "next": "15.5.9",
     "react": "19.0",
-    "react-dom": "19.0",
-    "use-scramble": "^2.2.15"
+    "react-dom": "19.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.1",
