--- a/package.json
+++ b/package.json
@@ -3,31 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "biome check .",
-    "lint:fix": "pnpm lint --write",
-    "format": "biome format . --write",
-    "dev": "next dev --turbopack -p 8080"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^3.1.1",
-    "@mdx-js/react": "^3.1.1",
-    "@shikijs/rehype": "^3.21.0",
-    "@tailwindcss/typography": "^0.5.15",
-    "babel-plugin-react-compiler": "^19.0.0-beta-a7bf2bd-20241110",
-    "lucide-react": "^0.456.0",
-    "next": "15.5.9",
-    "react": "19.0",
-    "react-dom": "19.0"
+    "@heroicons/react": "^2.1.5",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^16.0.0",
+    "@shikijs/transformers": "^3.22.0",
+    "@tailwindcss/postcss": "4.0.15",
+    "@types/mdx": "^2.0.12",
+    "clsx": "^2.1.0",
+    "next": "16.1.1-canary.6",
+    "react": "0.0.0-experimental-408b38ef-20251023",
+    "react-dom": "0.0.0-experimental-408b38ef-20251023",
+    "sharp": "^0.33.4",
+    "shiki": "^3.2.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.8.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "postcss": "^8.4.47",
+    "tailwindcss": "4.0.0-beta.8",
+    "typescript": "^5.9.3"
+  },
+  "packageManager": "pnpm@8.7.0+sha512.1d61f8c10e8a5a5dbfbddea0f1f5efb7dbd5177223073aec953cf230aa46416884b9427a6421dba78f28ad0f93fbede38ba57083237b350243de6b1e3a8ce71d"
 }
